# Clip-8

./: CMakeLists.txt  README.md
src/: clip-8.c
